--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   "dependencies": {
     "@elastic/elasticsearch": "^7.11.0",
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "flat": "^5.0.2",
     "knex": "<0.20.0",
     "moment": "^2.29.1",
-    "react-bootstrap": "^1.5.0",
+    "react-bootstrap": "^1.5.1",
     "react-select": "^4.1.0",
     "sqlite3": "5.0.0",
     "strapi": "3.4.6",
